--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,10 @@
-* {
+@import "common/mixins";
+@import "block/st";
+
+*, *:after, *:before {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -11,7 +15,7 @@ html {
 
 :root {
   --purple-color: #433A8B;
-  --pink-color: #fe6091;
+  --pink-color: #FE6091;
   --gray-color: #999999;
 }
 
@@ -25,6 +29,10 @@ h1 {
 h2 {
   font-size: 22px;
   font-weight: 600;
+}
+
+input {
+  font: inherit;
 }
 
 header {
@@ -79,13 +87,12 @@ header {
 }
 
 .contact-us {
+  @include size(200px, 50px);
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   background-color: white;
-  height: 50px;
-  width: 200px;
   font-weight: 600;
   font-size: 18px;
   transition: .3s;
@@ -171,7 +178,18 @@ header {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-
+  //
+  //@include mq(768px) {
+  //
+  //}
+  //
+  //@include mq(1024px) {
+  //
+  //}
+  //
+  //@include mq(1200px) {
+  //
+  //}
 }
 
 .img-experience-1 {
@@ -244,8 +262,11 @@ header {
   margin-bottom: 100px;
 }
 
+$fs-m: 14px;
+$fs-l: 16px;
+
 .info-clients {
-  font-size: 14px;
+  font-size: $fs-m;
   color: var(--gray-color);
   font-weight: 500;
   margin-bottom: 100px;
@@ -300,6 +321,16 @@ header {
   width: 110px;
 }
 
+%flex {
+  display: flex;
+}
+
+%flex-center {
+  @extend %flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .arrow {
   cursor: pointer;
   transition: .3s;
@@ -340,9 +371,7 @@ header {
 }
 
 .blackout {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend %flex-center;
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, .4);
@@ -355,9 +384,7 @@ header {
 }
 
 .circle-play {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend %flex-center;
   height: 130px;
   width: 130px;
   border-radius: 50%;
@@ -428,8 +455,7 @@ header {
 }
 
 .small {
-  height: 50px;
-  width: 50px;
+  @include size(50px);
   background-color: red;
 }
 
@@ -676,6 +702,12 @@ header {
   background-repeat: no-repeat;
   background-position: center;
 }
+
+//@mixin mq($width) {
+//  @media all(min-width: $width) {
+//    @content;
+//  }
+//}
 
 @media (max-width: 1150px) {
   .box {
